# Projects

./: README.md
Stack_Calc/: CMakeLists.txt
Stack_Calc/include/: stack_calculator.h
Stack_Calc/src/: mainTests.cpp
